# skriptove_za_izbori

./: .gitignore  README.md  data_loading.py  pyproject.toml  reports.py  setup.py  unit_tests.py
2014_ep/: candidates_eu2014.txt  plots_results_old.py  sections_eu2014.txt
2014ns/: ind_pe2014.txt  protocols_pe2014.txt  readme_pe2014.txt  votes_pe2014.txt
2019_ep/: cik_parties.txt  izbori_utils.py  sumirani_danni.txt
data/: income_by_municipality.csv  mahali_sids.json  pe2013_pe_protocols.txt  pe2013_pe_sections.txt  pe2013_pe_votes_padded.csv  place_data.csv  protocols_02.04.2023.txt  protocols_14.11.2021.txt  sections_02.10.2022_corr.txt  sections_11.07.2021.txt  sections_26.03.2017.txt  unemployment_by_municipality.csv
data/econ/: economically_inactive_by_municipality.csv  (+1 more)
data/scraped/: 2024-06-09ep.csv  (+5 more)
izbori_ep2019/: izbori_utils.py  sumirani_danni.txt
izbori_eu2014/: parties_eu2014.txt  plot_any.py  plots_results.py  protocols_eu2014.txt  readme_eu2014.txt  votes_eu2014.txt
izbori_mestni2019/: Sekcii-08.09.2019-KM-0.xlsx
izbori_ns2014/: candidates_pe2014.txt  glasove_po_darzhava.py  parties_pe2014.txt  plots_anywhere.py  sections_pe2014.txt
skriptove_za_izbori/: data_loading.py  rename_map.py  reports.py
standardized_data/: protocols_02.10.2022.txt  sections_02.04.2023.txt  votes_02.10.2022_padded.csv  votes_2023-04-02_scraped.csv  votes_26.03.2017_padded.csv
stolen_app/: data_loading.py  helper_funcs.py  municipalities_wiki.csv  rename_map.py  unit_tests.py  votes_02.10.2022_padded.csv  votes_11.07.2021_padded.csv
unit_tests/: unit_tests.py
(+49 files in other folders)
