[tool.poetry]
name = "skriptove-za-izbori"
version = "0.1.0"
description = ""
authors = ["Petar Bakalov <petar.baka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
pandas = "~2.3"
jupyterlab = "<=4.9"
plotly = "^5.22.0"
lxml = "^5.2.2"
kaleido = "0.2.0"
tabulate = "^0.9.0"
selenium = "^4.25.0"
webdriver-manager = "^4.0.2"
selenium-stealth = "^1.0.6"
openpyxl = "^3.1.5"
folium = "^0.20.0"
geojson = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
